Background image still having issues on mobile since background-attachment attribute not supported by mobile but scales much better in browser. Will try for solution later

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ body {
 }
 
 #topContainer {
-    display: block;
     z-index: -10;
     background-image: url(images/veryblurred.jpg);
     width: 100%;
